--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,7 +37,7 @@
 />
 
 
-<!-- Hotjar Tracking Code for https://www.lnctreats.com -->
+<!-- Hotjar Tracking Code for https://www.lnctreats.com
 <script>
   (function(h,o,t,j,a,r){
       h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -47,8 +47,8 @@
       r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
       a.appendChild(r);
   })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
-    <title>Lauryn's Next-door Cottage</title>
+</script> -->
+    <title>Kaylala Kakes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
